syntax = "proto3";

option csharp_namespace = "ImageCompress";

package ImageCompress;

service ImageService {
  rpc UploadImage(UploadRequest) returns (UploadResponse);
  rpc DownloadImage(DownloadRequest) returns (DownloadResponse);
  rpc GetImageInfo(GetImageInfoRequest) returns (GetImageInfoResponse);
  rpc DeleteImage(DeleteRequest) returns (DeleteResponse);
}

message UploadRequest {
  bytes FileContent = 1;
  string FileName = 2;
  string ContentType = 3;
  string CompressRatio = 4;
  string AccountId = 5;
}
message UploadResponse {
  bool Success = 1;
  ImageInfoItem image = 2;
}

message DownloadRequest { string FileId = 1; }

message DownloadResponse {
  bytes FileContent = 1;
  string FileName = 2;
  string ContentType = 3;
}

message GetImageInfoRequest { string AccountId = 1; }

message GetImageInfoResponse { repeated ImageInfoItem Images = 1; }

message DeleteRequest { ImageInfoItem image = 1; }

message DeleteResponse {
  bool Success = 1;
  string Message = 2;
}

message ImageInfoItem {
  string Id = 1;
  string FileName = 2;
  int32 OriginSize = 3;
  int32 CompressedSize = 4;
  string ContentType = 5;
  int32 State = 6;
}